--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -575,7 +575,7 @@ body
 {
     width: 1310px;
     margin: auto;
-    padding: 100px 0px;
+    padding-top: 100px;
 }
 
 .contact-titl h1
@@ -597,6 +597,7 @@ body
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 10px;
     padding-top: 30px;
+    padding-bottom: 100px;
 }
 
 .contact-box
@@ -627,4 +628,24 @@ body
 .contact-box:hover
 {
     color: #87d37c;
+}
+
+.message-aria
+{
+    background-color: #f5f5f5;
+}
+
+.message-box
+{
+    width: 1310px;
+    margin: auto;
+    padding-top: 100px;
+    padding-bottom: 30px;
+}
+
+.input-box
+{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
 }
